--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-infinite-scroll-component": "^6.1.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
