--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -20,6 +22,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-infinite-scroll-component": "^6.1.1",
     "react-paystack": "^6.0.0",
     "react-toastify": "^11.0.5",
